# neuromesh

./: .gitignore  README.md  main.py  pyproject.toml
neuromesh/: mesh.py
notebooks/: subtract.ipynb
scripts/: partition_cell.py  subtract_spines.py
tests/: test_partition.py  test_partition_visual.py  test_real_mesh.py
