[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuromesh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "nbformat>=5.10.4",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "plotly>=6.5.2",
    "scipy>=1.17.0",
    "trimesh>=4.11.1",
]

[tool.setuptools.packages.find]
include = ["neuromesh*"]
exclude = ["data*", "notebooks*"]
